[package]
name = "magroquad_pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = {version = "0.4.4", features = ["audio"]}

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
opt-level = 3
lto = "thin"